--- a/plugmin-web-spring/pom.xml
+++ b/plugmin-web-spring/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.plugmin</groupId>
@@ -7,7 +9,7 @@
 		<version>1.0</version>
 	</parent>
 	<artifactId>plugmin-web-spring</artifactId>
-	<version>1.1</version>
+	<version>1.1-SNAPSHOT</version>
 	<name>plugmin-web-spring</name>
 	<url>http://maven.apache.org</url>
 
@@ -52,7 +54,7 @@
 		<connection>scm:git:https://github.com/varunkumarsp/plugmin-aggregator.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/varunkumarsp/plugmin-aggregator.git</developerConnection>
 		<url>https://github.com/varunkumarsp/plugmin-aggregator</url>
-		<tag>v1.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<repositories>
@@ -119,7 +121,7 @@
 		<dependency>
 			<groupId>org.plugmin</groupId>
 			<artifactId>plugmin-core</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<!-- Spring -->
