--- a/plugmin-web-spring/pom.xml
+++ b/plugmin-web-spring/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.plugmin</groupId>
@@ -9,7 +7,7 @@
 		<version>1.0</version>
 	</parent>
 	<artifactId>plugmin-web-spring</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<name>plugmin-web-spring</name>
 	<url>http://maven.apache.org</url>
 
@@ -54,13 +52,23 @@
 		<connection>scm:git:https://github.com/varunkumarsp/plugmin-aggregator/plugmin-web-spring.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/varunkumarsp/plugmin-aggregator/plugmin-web-spring.git</developerConnection>
 		<url>https://github.com/varunkumarsp/plugmin-aggregator/plugmin-web-spring</url>
-		<tag>HEAD</tag>
+		<tag>v1.1</tag>
 	</scm>
 
 	<repositories>
 		<repository>
 			<id>maven2.gueck.com-releases</id>
 			<url>http://maven2.gueck.com/releases</url>
+		</repository>
+		<repository>
+			<id>mavenrepo.snapshots</id>
+			<name>My Maven Repository - Snapshots</name>
+			<url>https://raw.github.com/varunkumarsp/Plugmin-snapshot/master/</url>
+		</repository>
+		<repository>
+			<id>mavenrepo.releases</id>
+			<name>My Maven Repository - Releases</name>
+			<url>https://raw.github.com/varunkumarsp/Plugmin-release/master/</url>
 		</repository>
 	</repositories>
 
@@ -121,7 +129,7 @@
 		<dependency>
 			<groupId>org.plugmin</groupId>
 			<artifactId>plugmin-core</artifactId>
-			<version>${project.version}</version>
+			<version>1.0</version>
 		</dependency>
 
 		<!-- Spring -->
